[add]admin_device

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,3 +16,16 @@
  @import "bootstrap";
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
+
+ header {
+  background-color: #1e1e20;
+ }
+
+ body {
+  background-color: #f1f1f1;
+ }
+
+ img {
+  border-radius: 20px;
+  border: 2px solid #1e1e20;
+ }
