[add]customer_searches

--- a/app/views/customer/reviews/new.html.erb
+++ b/app/views/customer/reviews/new.html.erb
@@ -30,7 +30,7 @@
               $('#rating-form').raty({
                 starOn: "<%= asset_path('star-on.png') %>",
                 starOff: "<%= asset_path('star-off.png') %>",
-                scoreName: 'review[rate]'s
+                scoreName: 'review[rate]'
               });
 　　　　　　</script>
           </tr>
