--- a/app/views/admin/devices/show.html.erb
+++ b/app/views/admin/devices/show.html.erb
@@ -17,11 +17,11 @@
             <td class="text-wrap" style="width: 30rem;"><%= @device.description %></td>
           </tr>
           <tr>
-            <th>ジャンル</th>
+            <th>カテゴリー</th>
             <td><%= @device.category.name %></td>
           </tr>
           <tr>
-            <th>ジャンル</th>
+            <th>メーカー</th>
             <td><%= @device.maker.name %></td>
           </tr>
           <tr>
@@ -33,6 +33,63 @@
           </tr>
         </table>
       </div>
+    </div>
+  </div>
+</main>
+
+<main class="mb-auto mt-5">
+  <div class="container">
+    <div class= "row mt-3 ml-3">
+      <h3>レビュー一覧</h3>
+    </div>
+    <div class="d-flex flex-row mt-3">
+      <div class="d-flex flex-column">
+        <h5>平均評価  (評価数:<%= @device.reviews.count %>)</h5>
+        <div class="average-review-rating" data-score=<%= @device.average_rate %>></div>
+        <script>
+          $('.average-review-rating').empty()
+          $('.average-review-rating').raty({
+            readOnly: true,
+            starOn: "<%= asset_path('star-on.png') %>",
+            starOff: "<%= asset_path('star-off.png') %>",
+            starHalf: "<%= asset_path('star-half.png') %>",
+            score: function() {
+              return $(this).attr('data-score')
+            }
+          });
+        </script>
+      </div>
+      <table class="ml-5 table table-inverse" style="width: 50rem;">
+        <thead class="table-color">
+          <tr>
+            <th scope="col">タイトル</th>
+            <th scope="col">評価</th>
+            <th scope="col">いいね</th>
+            <th scope="col">投稿日時</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @device.reviews.each do |review| %>
+            <tr>
+              <td><%= link_to review.title, admin_device_review_path(review.device.id, review.id), class: "link" %></td>
+              <td>
+                <div id="star-rate-<%= review.id %>"></div>
+                <script>
+                  $('#star-rate-<%= review.id %>').empty()
+                  $('#star-rate-<%= review.id %>').raty({
+                    readOnly: true,
+                    starOff:  '<%= asset_path('star-off.png') %>',
+                    starOn : '<%= asset_path('star-on.png') %>',
+                    score: <%= review.rate %>,
+                  });
+                </script>
+              </td>
+              <td></td>
+              <td></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
     </div>
   </div>
 </main>
