--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,19 +10,19 @@
   </head>
 
   <body>
-    <header>
+    <header class="sticky-top">
       <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container">
-          <a class="navbar-brand" href="/admin"><%= image_tag("G-device_logo.png", size: '60x60') %></a>
-          <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-              <% if customer_signed_in? %>
+          <% if customer_signed_in? %>
+            <a class="navbar-brand" href="/"><%= image_tag("G-device_logo.png", size: '60x60') %></a>
+            <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item ml-4"><%= link_to "My page",customers_mypage_path,class:"nav-link text-white" %></li>
                 <li class="nav-item ml-4"><%= link_to "Devices",devices_path,class:"nav-link text-white" %></li>
-                <%# マウスホバーでカテゴリーの一覧が表示され、カテゴリーを選択すると対象のデバイスのみが表示される%>
+                <%# ドロップダウンでカテゴリーの一覧が表示され、カテゴリーを選択すると対象のデバイスのみが表示される%>
                 <li class="nav-item ml-4 dropdown active">
                   <a href="#" class="dropdown-toggle nav-link text-white" data-toggle="dropdown">Category <span class="caret"></span></a>
                   <ul class="dropdown-menu mt-0">
@@ -35,7 +35,7 @@
                     <% end %>
                   </ul>
                 </li>
-                <%# マウスホバーでメーカーの一覧が表示され、メーカーを選択すると対象のデバイスのみが表示される%>
+                <%# ドロップダウンでメーカーの一覧が表示され、メーカーを選択すると対象のデバイスのみが表示される%>
                 <li class="nav-item ml-4 dropdown active">
                   <a href="#" class="dropdown-toggle nav-link text-white" data-toggle="dropdown">Maker <span class="caret"></span></a>
                   <ul class="dropdown-menu mt-0">
@@ -49,24 +49,45 @@
                   </ul>
                 </li>
                 <li class="nav-item ml-4"><%= link_to "Log out",destroy_customer_session_path,method: :delete,class:"nav-link text-white" %></li>
-              <% elsif admin_signed_in? %>
+              </ul>
+            </div>
+          <% elsif admin_signed_in? %>
+            <a class="navbar-brand" href="/admin"><%= image_tag("G-device_logo.png", size: '60x60') %></a>
+            <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item ml-4"><%= link_to "Devices",admin_devices_path,class:"nav-link text-white" %></li>
                 <li class="nav-item ml-4"><%= link_to "Category",admin_categories_path,class:"nav-link text-white" %></li>
                 <li class="nav-item ml-4"><%= link_to "Makers",admin_makers_path,class:"nav-link text-white" %></li>
                 <li class="nav-item ml-4"><%= link_to "Customers",admin_customers_path,class:"nav-link text-white" %></li>
                 <li class="nav-item ml-4"><%= link_to "Log out",destroy_admin_session_path,method: :delete,class:"nav-link text-white" %></li>
-              <% else %>
+              </ul>
+            </div>
+          <% else %>
+            <a class="navbar-brand" href="/"><%= image_tag("G-device_logo.png", size: '60x60') %></a>
+            <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav ml-auto">
                 <li class="nav-item ml-4"><%= link_to "About",about_path,class:"nav-link text-white" %></li>
                 <li class="nav-item ml-4"><%= link_to "Sign up",new_customer_registration_path,class:"nav-link text-white" %></li>
                 <li class="nav-item ml-4"><%= link_to "Log in",new_customer_session_path,class:"nav-link text-white" %></li>
-              <% end %>
-            </ul>
-          </div>
+              </ul>
+            </div>
+          <% end %>
         </div>
       </nav>
     </header>
-    <main>
+    <main class="mb-5 mt-5">
       <%= yield %>
     </main>
+    <footer class="fixed-bottom py-1">
+      <div class="container text-center text-white">
+        <p>© Copyright 2021 G-device All rights reserved. <%= link_to "お問い合わせはこちら", new_contact_path %></p>
+      </div>
+    </footer>
   </body>
 </html>
