--- a/app/views/admin/contacts/show.html.erb
+++ b/app/views/admin/contacts/show.html.erb
@@ -1,9 +1,11 @@
 <div class="container">
-  <div class= "row mt-3 ml-3">
-    <h3>お問い合わせ内容</h3>
+  <div class= "row">
+    <div class="col m-3">
+      <h3>お問い合わせ詳細</h3>
+    </div>
   </div>
-  <div class="d-flex flex-row">
-    <div>
+  <div class="row">
+    <div class="offset-md-1 col-md-8">
       <table class="table table-borderless">
         <tr>
           <th>ユーザー名</th>
@@ -18,11 +20,12 @@
           <td><%= @contact.title %></td>
         </tr>
         <tr>
-          <th>レビュー</th>
+          <th>お問い合わせ内容</th>
           <td class="text-wrap" style="width: 30rem;"><%= @contact.message %></td>
         </tr>
         <tr>
-          <th><%= link_to "お問い合わせをを削除する", admin_contact_path(@contact), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %></th>
+          <th></th>
+          <td><%= link_to "お問い合わせをを削除する", admin_contact_path(@contact), method: :delete, "data-confirm" => "本当に消しますか?", class: "btn btn-danger motion" %></td>
         </tr>
       </table>
     </div>
