[add]header_footer

--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -8,7 +8,7 @@
           <div style="margin-right:50px">カテゴリー名</div>
           <div style="margin-right:50px"><%= f.text_field :name %></div>
         </div>
-        <%= f.submit "変更を保存", class: "btn btn-success" %>
+        <%= f.submit "変更を保存", class: "btn btn-success motion" %>
       <% end %>
   </div>
 </div>
