--- a/app/views/admin/devices/show.html.erb
+++ b/app/views/admin/devices/show.html.erb
@@ -10,7 +10,7 @@
       <table class="ml-5 table table-borderless">
         <tr>
           <th>商品名</th>
-          <td><%= @device.name %></td>
+          <td class="text-wrap" style="width: 30rem;"><%= @device.name %></td>
         <tr>
           <th>商品説明</th>
           <td class="text-wrap" style="width: 30rem;"><%= @device.description %></td>
