--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -18,7 +18,7 @@
  @import 'font-awesome';
 
  header {
-  background-color: #1e1e20;
+  background-color: #000;
  }
 
  body {
@@ -26,13 +26,59 @@
  }
 
  footer {
-  background-color: #1e1e20;
+  background-color: #000;
  }
 
  img {
-  border-radius: 20px;
+  border-radius: 10px;
  }
 
 .navbar-toggler {
   background-color: #fff;
+}
+
+.box{
+ height: 90vh;
+}
+
+.top1{
+ background-image: image-url("test1.jpg");
+ font-family: sans-serif;
+}
+
+.top2{
+ background-image: image-url("test2.jpg");
+ font-family: sans-serif;
+}
+
+.top3{
+ background-image: image-url("test3.jpg");
+ font-family: sans-serif;
+}
+
+.top4{
+ background-image: image-url("test4.jpg");
+ font-family: sans-serif;
+}
+
+.top5{
+ background-image: image-url("test5.jpg");
+ font-family: sans-serif;
+}
+
+.about{
+ width: 100%;
+ height: 90vh;
+ background-image: image-url("about.jpg");
+ background-size: cover;
+ background-position: center;
+ font-family: monospace;
+}
+
+.card {
+ transition:transform 0.3s;
+}
+
+.card:hover {
+ transform:scale(1.1);
 }
