--- a/app/views/customer/devices/index.html.erb
+++ b/app/views/customer/devices/index.html.erb
@@ -2,9 +2,9 @@
   <div class="row">
     <div class="col m-3">
       <h3>デバイス一覧</h3>
-      <div class="d-flex flex-wrap">
+      <div class="d-flex flex-wrap justify-content-around">
         <% @devices.each do |device| %>
-          <div class="p-4">
+          <div class="card p-2 m-4">
             <%= link_to device_path(device), class: "link" do %>
               <%= attachment_image_tag(device, :image, size: '200x150') %><br>
               <p class="text-wrap" style="width: 10rem;">
