--- a/app/views/customer/homes/recommend.html.erb
+++ b/app/views/customer/homes/recommend.html.erb
@@ -1,10 +1,19 @@
+<div class="box">
+  <div id="theTarget">
+    <div class="top1"></div>
+    <div class="top2"></div>
+    <div class="top3"></div>
+    <div class="top4"></div>
+    <div class="top5"></div>
+  </div>
+</div>
 <div class="container">
   <div class="row">
     <div class="col m-3">
       <h3>おすすめデバイス一覧</h3>
-      <div class="d-flex flex-wrap">
+      <div class="d-flex flex-wrap justify-content-around">
         <% @review_recommend.each do |review_recommend| %>
-          <div class="p-4">
+          <div class="card p-2 m-4">
             <%= link_to device_path(review_recommend), class: "link" do %>
               <%= attachment_image_tag(review_recommend, :image, size: '200x150') %><br>
               <p class="text-wrap" style="width: 10rem;">
