--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>GDevice</title>
+    <title>G-Device</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -14,7 +14,7 @@
       <nav class="navbar navbar-expand-lg navbar-light shadow-sm">
         <div class="container">
           <% if customer_signed_in? %>
-            <a class="navbar-brand" href="/recommend"><%= image_tag("G-device_logo.png", size: '60x60') %></a>
+            <a class="navbar-brand" href="/recommend"><%= image_tag("G-device_logo1.png", size: '200x43') %></a>
             <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -52,7 +52,7 @@
               </ul>
             </div>
           <% elsif admin_signed_in? %>
-            <a class="navbar-brand" href="/admin"><%= image_tag("G-device_logo.png", size: '60x60') %></a>
+            <a class="navbar-brand" href="/admin"><%= image_tag("G-device_logo1.png", size: '200x43') %></a>
             <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -96,7 +96,7 @@
               </ul>
             </div>
           <% else %>
-            <a class="navbar-brand" href="/"><%= image_tag("G-device_logo.png", size: '60x60') %></a>
+            <a class="navbar-brand" href="/"><%= image_tag("G-device_logo1.png", size: '200x43') %></a>
             <button class="navbar-toggler"type="button" data-toggle="collapse"data-target="#navbarSupportedContent"aria-controls="navbarSupportedContent"aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -111,11 +111,25 @@
         </div>
       </nav>
     </header>
-    <main class="mb-5 mt-5">
-      <%= yield %>
-    </main>
-    <footer class="fixed-bottom py-1">
-      <div class="container text-center text-white">
+    <% if current_page?(root_path) %>
+      <main class="mb-5">
+        <%= yield %>
+      </main>
+    <% elsif current_page?(about_path) %>
+      <main class="mb-5">
+        <%= yield %>
+      </main>
+    <% elsif current_page?(recommend_path) %>
+      <main class="mb-5">
+        <%= yield %>
+      </main>
+    <% else %>
+      <main class="mb-5 mt-5">
+        <%= yield %>
+      </main>
+    <% end %>
+    <footer class="fixed-bottom">
+      <div class="container mt-2 text-center text-white">
         <p>© Copyright 2021 G-device All rights reserved. <% if customer_signed_in? %><%= link_to "お問い合わせはこちら", new_contact_path %><% end %></p>
       </div>
     </footer>
