[add]device_search

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -9,7 +9,7 @@
           <%= f.submit "新規登録", class: "btn btn-success motion ml-5" %>
         <% end %>
       </div>
-      <table class="table table-hover w-50">
+      <table class="table table-inverse w-50">
         <thead class="table-color">
           <th>カテゴリー</th>
           <th></th>
