--- a/app/views/admin/searches/search.html.erb
+++ b/app/views/admin/searches/search.html.erb
@@ -20,7 +20,7 @@
         <% @devices.each do |device| %>
           <tr>
             <td><%= device.id %></td>
-            <td><%= link_to device.name, admin_device_path(device), class: "text-info" %></td>
+            <td><%= link_to device.name, admin_device_path(device), class: "link" %></td>
             <td><%= device.price.to_s(:delimited) %>円</td>
             <td><%= device.category.name %></td>
             <td><%= device.maker.name %></td>
@@ -30,6 +30,7 @@
     </table>
   </div>
 </div>
-<div class="d-flex justify-content-around">
+<div class="mx-auto" style="width: 200px;">
   <%= paginate @devices %>
 </div>
+
