--- a/app/views/customer/devices/show.html.erb
+++ b/app/views/customer/devices/show.html.erb
@@ -48,7 +48,7 @@
       <tbody>
         <% @device.reviews.each do |review| %>
           <tr>
-            <td><%= link_to review.title, device_review_path(review.device.id, review.id), class: "link" %></td>
+            <td><%= link_to review.title, device_review_path(review.device.id, review.id), class: "text-info" %></td>
             <td>
               <div id="star-rate-<%= review.id %>"></div>
               <script>
