--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,68 +17,113 @@
  @import 'font-awesome-sprockets';
  @import 'font-awesome';
 
- header {
+/* ヘッダー色 */
+header {
   background-color: #000;
- }
+}
 
- body {
-  background-color: #f1f1f1;
- }
+/* ボディー背景画像、文字色 */
+body {
+  background-image: image-url("bg_black.jpg");
+  background-size: cover;
+  color: #fff;
+}
 
- footer {
+/* フッター色 */
+footer {
   background-color: #000;
- }
+}
 
- img {
+/* 表示画像の角を丸くする */
+img {
   border-radius: 10px;
- }
+}
 
+/* ハンバーガーメニューの色 */
 .navbar-toggler {
   background-color: #fff;
 }
 
+/* スライドショー設定 */
 .box{
- height: 90vh;
+  height: 90vh;
 }
 
 .top1{
- background-image: image-url("test1.jpg");
- font-family: sans-serif;
+  background-image: image-url("top1.jpg");
+  font-family: sans-serif;
 }
 
 .top2{
- background-image: image-url("test2.jpg");
- font-family: sans-serif;
+  background-image: image-url("top2.jpg");
+  font-family: sans-serif;
 }
 
 .top3{
- background-image: image-url("test3.jpg");
- font-family: sans-serif;
+  background-image: image-url("top3.jpg");
+  font-family: sans-serif;
 }
 
 .top4{
- background-image: image-url("test4.jpg");
- font-family: sans-serif;
+  background-image: image-url("top4.jpg");
+  font-family: sans-serif;
 }
 
 .top5{
- background-image: image-url("test5.jpg");
- font-family: sans-serif;
+  background-image: image-url("top5.jpg");
+  font-family: sans-serif;
 }
 
+.recommend1{
+  background-image: image-url("recommend1.jpg");
+  font-family: sans-serif;
+}
+
+.recommend2{
+  background-image: image-url("recommend2.jpg");
+  font-family: sans-serif;
+}
+
+.recommend3{
+  background-image: image-url("recommend3.jpg");
+  font-family: sans-serif;
+}
+
+.recommend4{
+  background-image: image-url("recommend4.jpg");
+  font-family: sans-serif;
+}
+
+.recommend5{
+  background-image: image-url("recommend5.jpg");
+  font-family: sans-serif;
+}
+
+/* アバウト設定 */
 .about{
- width: 100%;
- height: 90vh;
- background-image: image-url("about.jpg");
- background-size: cover;
- background-position: center;
- font-family: monospace;
+  width: 100%;
+  height: 90vh;
+  background-image: image-url("about.jpg");
+  background-size: cover;
+  background-position: center;
+  font-family: monospace;
 }
 
+/* デバイスの表示設定 */
 .card {
- transition:transform 0.3s;
+  transition:transform 0.3s;
 }
 
 .card:hover {
- transform:scale(1.1);
+  transform:scale(1.1);
+}
+
+/* tableの文字色 */
+.table {
+  color: #ffffff;
+}
+
+/* ページネーションリンク色 */
+.pagination>li>a {
+  color: #17a2b8;
 }
