--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -14,7 +14,7 @@
       <tbody>
         <% @contacts.each do |contact| %>
           <tr>
-            <td><%= link_to contact.title, admin_contact_path(contact), class: "link" %></td>
+            <td><%= link_to contact.title, admin_contact_path(contact), class: "text-info" %></td>
             <td><%= contact.name %></td>
             <td><%= contact.created_at.strftime("%Y/%m/%d") %></td>
           </tr>
@@ -23,6 +23,6 @@
     </table>
   </div>
 </div>
-<div class="mx-auto" style="width: 200px;">
+<div class="d-flex justify-content-around">
   <%= paginate @contacts %>
 </div>
