--- a/app/views/customer/homes/recommend.html.erb
+++ b/app/views/customer/homes/recommend.html.erb
@@ -1,10 +1,35 @@
 <div class="box">
   <div id="theTarget">
-    <div class="top1"></div>
-    <div class="top2"></div>
-    <div class="top3"></div>
-    <div class="top4"></div>
-    <div class="top5"></div>
+    <div class="recommend1">
+      <h1 class="d-flex align-items-center justify-content-center text-center text-white" style="height: 90vh;">
+        Find the best one<br>
+        G-device
+      </h1>
+    </div>
+    <div class="recommend2">
+      <h1 class="d-flex align-items-center justify-content-center text-center text-white" style="height: 90vh;">
+        Find the best one<br>
+        G-device
+      </h1>
+    </div>
+    <div class="recommend3">
+      <h1 class="d-flex align-items-center justify-content-center text-center text-white" style="height: 90vh;">
+        Find the best one<br>
+        G-device
+      </h1>
+    </div>
+    <div class="recommend4">
+      <h1 class="d-flex align-items-center justify-content-center text-center text-white" style="height: 90vh;">
+        Find the best one<br>
+        G-device
+      </h1>
+    </div>
+    <div class="recommend5">
+      <h1 class="d-flex align-items-center justify-content-center text-center text-white" style="height: 90vh;">
+        Find the best one<br>
+        G-device
+      </h1>
+    </div>
   </div>
 </div>
 <div class="container">
@@ -14,7 +39,7 @@
       <div class="d-flex flex-wrap justify-content-around">
         <% @review_recommend.each do |review_recommend| %>
           <div class="card p-2 m-4">
-            <%= link_to device_path(review_recommend), class: "link" do %>
+            <%= link_to device_path(review_recommend), class: "text-info" do %>
               <%= attachment_image_tag(review_recommend, :image, size: '200x150') %><br>
               <p class="text-wrap" style="width: 10rem;">
                 <%= review_recommend.name %>
