--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,29 +1,36 @@
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "admin/shared/error_messages", resource: resource %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+<div class="container">
+  <div class="row">
+    <div class="col ml-5">
+      <h3 class="mb-5">新規管理者登録</h3>
+      <div class="d-flex justify-content-around">
+        <div class="p-3 bg-white text-dark rounded">
+        <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+          <%= render "admin/shared/error_messages", resource: resource %>
+          <div class="field">
+            <%= f.label :email %><br />
+            <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "メールアドレス", size: 30 %>
+          </div>
+          <div class="field">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %>文字以上)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password", placeholder: "パスワード", size: 30 %>
+          </div>
+          <div class="field">
+            <%= f.label :password_確認用 %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "確認のため2度入力してください", size: 30 %>
+          </div>
+          <div class="actions">
+            <%= f.submit "Sign up", class: "btn btn-primary btn-sm mt-2 mb-2" %>
+          </div>
+          <div>
+            ログインは<%= link_to "こちら", new_admin_session_path, class: "text-info" %>
+          </div>
+        <% end %>
+        </div>
+      </div>
+    </div>
   </div>
+</div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "admin/shared/links" %>
