--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="row">
-    <div class="col ml-5">
-      <h3 class="mb-5">新規管理者登録</h3>
-      <div class="d-flex justify-content-around">
+    <div class="col m-5">
+      <h3 class="text-center mb-3">管理者新規登録</h3>
+      <div class="d-flex justify-content-center">
         <div class="p-3 bg-white text-dark rounded">
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
           <%= render "admin/shared/error_messages", resource: resource %>
