--- a/app/views/customer/customers/show.html.erb
+++ b/app/views/customer/customers/show.html.erb
@@ -26,7 +26,7 @@
           </td>
         </tr>
         <tr>
-          <th></th>
+          <th><%= link_to "レビュー一覧", customers_review_path, class: "btn btn-success motion" %></th>
           <td><%= link_to "編集する", customers_mypage_edit_path, class: "btn btn-success motion" %></td>
         </tr>
       </table>
